# snow

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: f_simple.sc  v_simple.sc
engine/include/: snow.h
engine/src/: renderer.cpp  renderer.h  window.cpp
game/src/: game.cpp  game.h  main.cpp
src/: app.cpp  app.h  core.h  engine.cpp  engine.h  game.cpp  game.h  main.cpp  window.cpp  window.h
src/engine/: renderer.h
